<resources>
    <string name="app_name">Hermes</string>
    <string name="input_book_title">책 제목을 입력하세요.</string>
    <string name="book_price">가격 : %d</string>
    <string name="book_price_detail">%d원</string>
    <string name="empty_books">요청하신 책이 없습니다.</string>
    <string name="register_location">위치를 등록해주세요</string>
    <string name="location_register">위치 등록</string>
    <string name="set_to_current_location">현재 위치로 설정</string>
    <string name="register_selected_location">이 위치로 등록하기</string>
    <string name="book_introduction">작품 소개</string>
    <string name="check_stock">재고 확인</string>
    <string name="home">홈</string>
    <string name="unknown_stocks">재고 확인 불가</string>
    <string name="stocks">재고 : %s권</string>
    <string name="find_bookstore">서점 찾기</string>
    <string name="new_books">신간 도서</string>
    <string name="bestsellers">베스트셀러</string>
    <string name="please_allow_location_app_permission">앱 정보 > 권한에서 위치 접근 권한을 허용해주세요."</string>
    <string name="error_occur_please_retry">오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="cannot_load_list">목록을 불러올 수 없습니다.</string>

</resources>