<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".book.view.fragment.BookDetailFragment"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <ImageView
        android:id="@+id/iv_book_thumbnail_background"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_book_thumbnail"
        android:layout_width="200dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_book_thumbnail_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        style="@style/BoldText"
        android:id="@+id/tv_book_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/lightBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_book_thumbnail_background" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_book_name"
        app:layout_constraintStart_toStartOf="@+id/tv_book_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_price_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_introduction"
        android:textSize="16sp"
        android:textColor="@color/lightBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_author"
        app:layout_constraintStart_toStartOf="@+id/tv_description_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_check_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:background="@drawable/border_round_coral_16"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <TextView
            android:id="@+id/tv_check_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/check_stock"
            android:textColor="@color/lightBlack"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_check_stock"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_check_stock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_search_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/cl_retry"
        layout="@layout/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>